##Text encoding: utf-8

2016-01-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/molecule.cc: fixed two crashers.

2015-12-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: add kudos as requested.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/paint/gchempaint.desktop.in.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2015-12-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/canvas.cc: fix drawing when zoomed.

2015-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: don't crash when importing an invalid string.
	[Redhat bug #1285154]

2015-01-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: one more typo.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2015-01-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/retrosynthesis.cc:

2015-01-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.14.11).

2015-01-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/gchem3d.appdata.xml.in: fixed typos.
	* programs/calc/gchemcalc.appdata.xml.in: ditto.
	* programs/crystal/gcrystal.appdata.xml.in: ditto.
	* programs/paint/gchempaint.appdata.xml.in: ditto.
	* programs/spectra/gspectrum.appdata.xml.in: ditto.
	* programs/table/gchemtable.appdata.xml.in: ditto.

2014-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/widgetdata.cc: fix an object bounds evaluation issue.
	* libs/gcp/widgetdata.h: ditto.

2014-09-22  Jean Bréfort  <jean.brefort@normalesup.org>